Fixed a right alignment issue when RTL is on

--- a/src/components/form-field/form-field.scss
+++ b/src/components/form-field/form-field.scss
@@ -22,7 +22,7 @@ gx-form-field {
   & > gx-form-field {
     [data-part="field"],
     [data-readonly] {
-      text-align: right;
+      text-align: end;
     }
   }
 }
